[gd_scene load_steps=13 format=2]

[ext_resource path="res://Nodes/Pedras/Pedrinhas.gd" type="Script" id=1]
[ext_resource path="res://Assets/Atlas/sprite_pedrinhas.png" type="Texture" id=2]
[ext_resource path="res://Assets/Atlas/PongRacket.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.6674
height = 1.37957

[sub_resource type="Animation" id=2]
resource_name = "Attacking"
length = 0.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 11, 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Dies"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 14 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 1, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.65
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 1 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 268.196
height = 2.67108

[sub_resource type="CapsuleShape2D" id=8]
radius = 131.899
height = 1.96363

[sub_resource type="CapsuleShape2D" id=9]
radius = 43.2281
height = 1.5

[node name="Pedrinhas" type="KinematicBody2D" groups=[
"Pedrinha",
]]
scale = Vector2( 0.3, 0.3 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.82892, 2.12299 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 15
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 2 )
anims/Dies = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jumping = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6.68066, 2.64239 )
shape = SubResource( 7 )

[node name="Attack_Animation" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Animation"]
position = Vector2( -7.08257, 2.12158 )
shape = SubResource( 8 )

[node name="Dar_Dano" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dar_Dano"]
position = Vector2( -6.98317, 2.12358 )
shape = SubResource( 9 )

[node name="Pedrinha_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Attack_Animation" to="." method="_on_Attack_Animation_body_entered"]
[connection signal="body_exited" from="Attack_Animation" to="." method="_on_Attack_Animation_body_exited"]
[connection signal="body_entered" from="Dar_Dano" to="." method="_on_Dar_Dano_body_entered"]
